--- a/database/Female.html
+++ b/database/Female.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Insertion - Contact Page</title>
+  <title>Female</title>
 <!--
 
 Template 2101 Insertion
@@ -18,7 +18,8 @@ http://www.tooplate.com/view/2101-insertion
   <link rel="stylesheet" href="css/bootstrap.min.css">                                            <!-- https://getbootstrap.com/ -->
   <link rel="stylesheet" href="css/fontawesome-all.min.css">                                      <!-- Font awesome -->
   <link rel="stylesheet" href="css/tooplate-style.css">                                           <!-- Templatemo style -->
-
+<link rel="icon" href="../icon.png" sizes="16x16">
+	
   <script>
     var renderPage = true;
 
@@ -53,10 +54,10 @@ http://www.tooplate.com/view/2101-insertion
                   <a href="https://www.countrybyface.com/" class="nav-link tm-nav-link tm-text-white">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="Male.html" class="nav-link tm-nav-link tm-text-white">Male</a>
+                  <a href="Male.html" class="nav-link tm-nav-link tm-text-white active">Male</a>
                 </li>
                 <li class="nav-item">
-                  <a href="Female.html" class="nav-link tm-nav-link tm-text-white active">Female</a>
+                  <a href="Female.html" class="nav-link tm-nav-link tm-text-white">Female</a>
                 </li>
               </ul>
             </nav>
@@ -66,39 +67,226 @@ http://www.tooplate.com/view/2101-insertion
 
       <div class="container text-center tm-welcome-container">
         <div class="tm-welcome">
-          <i class="fas tm-fa-big fa-music tm-fa-mb-big"></i>
-          <h1 class="text-uppercase mb-3 tm-site-name">Insertion</h1>
-          <p class="tm-site-description">New HTML Website Template</p>
+          <i class="fas tm-fa-big fa-archive tm-fa-mb-big"></i>
+          <h1 class="text-uppercase mb-3 tm-site-name">Female Database</h1>
+          <p class="tm-site-description">More than 100 pictures for all 15 countries</p>
         </div>
       </div>
 
     </div>
 
+      <div class="row tm-about-row tm-mt-big tm-mb-medium">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 tm-about-col-left">
+          <div class="tm-v-center tm-bg-gray h-100 tm-about-text">
+            <h2 class="tm-text-brown mb-4 tm-about-h2">Data Collection Method</h2>
+            <p class="tm-about-description mb-0">Images of celebrities from each country are selectively chosen based on popularity and a degree to which the celebrity's physical appearance is appreciated from natives' perspectives. Images are only then considered our database and put into use by Google's teachable machine.</p>
+          </div>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+          <div class="tm-about-img"></div>
+        </div>
+      </div>
+
+      <div class="row tm-about-row tm-mb-medium">
+        <div class="tm-tab-links-container">
+
+          <ul class="nav nav-tabs" id="tmTab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link active" id="home-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="home" aria-selected="true">
+                <i class="fas fa-2x fa-flag pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Arab</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="profile-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="profile" aria-selected="false">
+                <i class="fab fa-2x fa-accusoft pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Brazil</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab3" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fab fa-2x fa-amazon-pay pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Canada</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab4" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">China</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">France</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Germany</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">India</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Italy</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Japan</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">South Korea</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Mexico</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Russia</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">Spain</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">U.K.</p>
+              </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="contact" aria-selected="false">
+                <i class="fas fa-2x fa-headphones pr-4"></i>
+                <p class="media-body mb-0 tm-media-link">U.S.A.</p>
+              </a>
+            </li>
+			
+          </ul>
+
+        </div>
+
+        <div class="tm-tab-content-container">
+          <div class="tab-content h-100 tm-bg-gray" id="myTabContent">
+            <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+              <div class="media tm-media-2">
+                <i class="fas fa-5x fa-music mb-3 tm-text-pink-dark tm-media-2-icon"></i>
+                <div class="media-body tm-media-body-2">
+                  <h2 class="mb-4 tm-text-pink-dark tm-media-2-header">Quisque pharetra tellus eu mi aliquet</h2>
+                  <p class="mb-4">Phasellus efficitur, ante et bibendum accumsan, nisi tellus fermentum eros, eget tincidunt enim orci at arcu. Etiam vel ligula non neque pharetra scelerisque mollis ac arcu.</p>
+                  <p class="mb-4">In luctus eu turpis sed sodales. Suspendisse nisi ante, dapibus id purus at, tristique ullamcorper dolor. Nullam tempus quam id odio tempus bibendum. Nullam vulputate, justo fermentum interdum fermentum, diam elit iaculis lorem, sed puvina.</p>
+                  <a href="#" class="btn btn-secondary">Read More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
+              <div class="media tm-media-2">
+                <i class="fab fa-5x fa-accusoft mb-3 tm-text-pink-dark tm-media-2-icon"></i>
+                <div class="media-body tm-media-body-2">
+                  <h2 class="mb-4 tm-text-pink-dark tm-media-2-header">Nunc nec luctus eu mi aliquet</h2>
+                  <p class="mb-4">Phasellus efficitur, ante et bibendum accumsan, nisi tellus fermentum eros, eget tincidunt enim orci at arcu. Etiam vel ligula non neque pharetra scelerisque mollis ac arcu.</p>
+                  <p class="mb-4">In luctus eu turpis sed sodales. Suspendisse nisi ante, dapibus id purus at, tristique ullamcorper dolor. Nullam tempus quam id odio tempus bibendum. Nullam vulputate, justo fermentum interdum fermentum, diam elit iaculis lorem, sed puvina.</p>
+                  <a href="#" class="btn btn-secondary">Read More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+              <div class="media tm-media-2">
+                <i class="fab fa-5x fa-amazon-pay mb-3 tm-text-pink-dark tm-media-2-icon"></i>
+                <div class="media-body tm-media-body-2">
+                  <h2 class="mb-4 tm-text-pink-dark tm-media-2-header">Etiam vel ligula eu mi aliquet</h2>
+                  <p class="mb-4">Phasellus efficitur, ante et bibendum accumsan, nisi tellus fermentum eros, eget tincidunt enim orci at arcu. Etiam vel ligula non neque pharetra scelerisque mollis ac arcu.</p>
+                  <p class="mb-4">In luctus eu turpis sed sodales. Suspendisse nisi ante, dapibus id purus at, tristique ullamcorper dolor. Nullam tempus quam id odio tempus bibendum. Nullam vulputate, justo fermentum interdum fermentum, diam elit iaculis lorem, sed puvina.</p>
+                  <a href="#" class="btn btn-secondary">Read More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
+              <div class="media tm-media-2">
+                <i class="fas fa-5x fa-headphones mb-3 tm-text-pink-dark tm-media-2-icon"></i>
+                <div class="media-body tm-media-body-2">
+                  <h2 class="mb-4 tm-text-pink-dark tm-media-2-header">Sed id magna eu mi aliquet</h2>
+                  <p class="mb-4">Phasellus efficitur, ante et bibendum accumsan, nisi tellus fermentum eros, eget tincidunt enim orci at arcu. Etiam vel ligula non neque pharetra scelerisque mollis ac arcu.</p>
+                  <p class="mb-4">In luctus eu turpis sed sodales. Suspendisse nisi ante, dapibus id purus at, tristique ullamcorper dolor. Nullam tempus quam id odio tempus bibendum. Nullam vulputate, justo fermentum interdum fermentum, diam elit iaculis lorem, sed puvina.</p>
+                  <a href="#" class="btn btn-secondary">Read More</a>
+                </div>
+              </div>
+            </div>
+			  
+			 <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab4-tab">
+              <div class="media tm-media-2">
+                <i class="fas fa-5x fa-headphones mb-3 tm-text-pink-dark tm-media-2-icon"></i>
+                <div class="media-body tm-media-body-2">
+                  <h2 class="mb-4 tm-text-pink-dark tm-media-2-header">Sed id magna eu mi aliquet</h2>
+                  <p class="mb-4">Phasellus efficitur, ante et bibendum accumsan, nisi tellus fermentum eros, eget tincidunt enim orci at arcu. Etiam vel ligula non neque pharetra scelerisque mollis ac arcu.</p>
+                  <p class="mb-4">In luctus eu turpis sed sodales. Suspendisse nisi ante, dapibus id purus at, tristique ullamcorper dolor. Nullam tempus quam id odio tempus bibendum. Nullam vulputate, justo fermentum interdum fermentum, diam elit iaculis lorem, sed puvina.</p>
+                  <a href="#" class="btn btn-secondary">Read More</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
 
       <!-- Bottom links -->
       <div class="row tm-about-row tm-mb-medium">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mb-4">
-          <h4 class="mb-4 tm-font-300">Latest Albums</h4>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Sed fringilla consectetur</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Mauris porta nisl quis</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Quisque maximus quam nec</a>
-          <a href="#" class="tm-text-blue-dark d-block">Class aptent taciti sociosqu ad</a>
+          <h4 class="mb-4 tm-font-300">Policies</h4>
+          <a href="https://www.countrybyface.com/privacy.html" class="tm-text-blue-dark d-block mb-2">Privacy Policy</a>
+          <a href="https://www.countrybyface.com/sitemap.xml" class="tm-text-blue-dark d-block mb-2">Sitemap</a>
+          <a href="https://play.google.com/store" target="_balnk" class="tm-text-blue-dark d-block mb-2">Google Playstore</a>
+
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mb-4">
           <h4 class="mb-4 tm-font-300">Our Pages</h4>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Nam dapibus imperdiet</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Primis in faucibus orci</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Sed interdum blandit dictum</a>
-          <a href="#" class="tm-text-blue-dark d-block">Donec non blandit nisl</a>
+          <a href="Male.html" class="tm-text-blue-dark d-block mb-2">Male Database</a>
+          <a href="Female.html" class="tm-text-blue-dark d-block mb-2">Female Database</a>
+          <a href="index.html" class="tm-text-blue-dark d-block mb-2">Main Database</a>
+          <a href="https://www.countrybyface.com/" class="tm-text-blue-dark d-block">Main Website</a>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
           <h4 class="mb-4 tm-font-300">Quick Links</h4>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Nullam scelerisque mauris</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Vivamus tristique enim non orci</a>
-          <a href="#" class="tm-text-blue-dark d-block mb-2">Luctus et ultrices posuere</a>
-          <a href="#" class="tm-text-blue-dark d-block">Cubilia Curae</a>
+          <a href="https://teachablemachine.withgoogle.com/" target="_balnk" class="tm-text-blue-dark d-block mb-2">Google AI</a>
+          <a href="https://support.google.com/webmasters/answer/70897?hl=en" target="_balnk" class="tm-text-blue-dark d-block mb-2">Google Crawling</a>
+          <a href="https://portfoliosimulator.netlify.app/" target="_balnk" class="tm-text-blue-dark d-block mb-2">Portfolio Simulator</a>
+          <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" target="_balnk" class="tm-text-blue-dark d-block">Jocoding Youtube Channel</a>
         </div>
       </div>
+	  
+	  <div class="ad">
+
+			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
+			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
+		</div>
+	  
+	  
       <footer class="row tm-about-row">
         <div class="col-xl-12">
           <p class="text-center p-4">Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name 
@@ -109,7 +297,6 @@ http://www.tooplate.com/view/2101-insertion
     </div> <!-- .container -->
 
   </div> <!-- .main -->
-
   <!-- load JS -->
   <script src="js/jquery-3.2.1.slim.min.js"></script> <!-- https://jquery.com/ -->
   <script src="js/bootstrap.min.js"></script>         <!-- https://getbootstrap.com/ -->
