--- a/es/index.html
+++ b/es/index.html
@@ -184,6 +184,13 @@
 	<div class="comment" id="disqus_thread"></div>
 
 	<footer class="footer text-center">
+		<div class="ad">
+			<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-1ji7rjmvigpye" 
+ data-ad-width   = "300" 
+ data-ad-height  = "250"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+		</div>
 		<div class="advertisement">
 			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1jydrf0ssw677" data-ad-width="320" data-ad-height="100"></ins>
 			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
