--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="subject" content="구글 AI를 통해 본인이 어떤 나라에서 인기있는 상인지 알아보세요!">
     <meta name="keywords" content="인공지능 얼굴상, 얼굴상, AI, 나라별 얼굴상, 나라별, 얼굴매력, 얼굴, 한국 얼굴상, 일본 얼굴상, 미국 얼굴상, 중국 얼굴상, 멕시코 얼굴상, 캐나다 얼굴상, 독일 얼굴상, 영국 얼굴상, 이탈리아 얼굴상, 아랍 얼굴상, 인도 얼굴상, 브라질 얼굴상, 러시아 얼굴상, 스페인 얼굴상, 프랑스 얼굴상">
     <meta name="author" content="홍석준">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
