--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light nav-distance">
-		<a class="navbar-brand" href="https://www.countrybyface.com/">나는 어느나라에서 호감상 일까?</a>
+		<a class="navbar-brand" href="https://www.countrybyface.com/">나라별 호감상</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
