--- a/en/index.html
+++ b/en/index.html
@@ -287,8 +287,8 @@
 	</script>
 	<script type="text/javascript">
 		let URL;
-		const URLM = "https://teachablemachine.withgoogle.com/models/WfklzxhXG/";
-		const URLG = "https://teachablemachine.withgoogle.com/models/jvRbPxgwA/";
+		const URLM = "https://teachablemachine.withgoogle.com/models/2Fo3541Ci/";
+		const URLG = "https://teachablemachine.withgoogle.com/models/iaRmRDEuN/";
 		let model, webcam, labelContainer, maxPredictions;
 		// Load the image model and setup the webcam
 		async function init() {
