--- a/zh/index.html
+++ b/zh/index.html
@@ -6,10 +6,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="naver-site-verification" content="64227dd9ddbd8fd00b1a95d730c5834e6dbbfa9d" />
-	<meta name="description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다.">
-	<meta name="title" content="나라별 인기 얼굴">
-    <meta name="subject" content="구글 AI를 통해 본인이 어떤 나라에서 인기있는 상인지 알아보세요!">
-    <meta name="keywords" content="인공지능 얼굴상, 얼굴상, AI, 나라별 얼굴상, 나라별, 얼굴매력, 얼굴, 한국 얼굴상, 일본 얼굴상, 미국 얼굴상, 중국 얼굴상, 멕시코 얼굴상, 캐나다 얼굴상, 독일 얼굴상, 영국 얼굴상, 이탈리아 얼굴상, 아랍 얼굴상, 인도 얼굴상, 브라질 얼굴상, 러시아 얼굴상, 스페인 얼굴상, 프랑스 얼굴상">
+	<meta name="description" content="这是一个利用谷歌人工智能制作成的各个国家受欢迎的面貌判别网站。">
+	<meta name="title" content="各国家流行的面貌">
+    <meta name="subject" content="用谷歌的人工智能来看看您的面貌在哪个国家最受欢迎吧！">
+    <meta name="keywords" content="人工智能面貌，面貌，人工智能，各国家的面貌，各国家，有魅力的面貌，脸， 韩国人面貌，日本人面貌，美国人面貌，中国人面貌，墨西哥人面貌，加拿大人面貌，德国人面貌，英国人面貌，意大利人面貌，阿拉伯人面貌，印度人面貌，巴西人面貌，俄国人面貌，西班牙人面貌，法国人面貌">
     <meta name="author" content="홍석준">
 
 	<!-- Bootstrap CSS -->
@@ -29,14 +29,14 @@
 	<!-- open graphic -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="나라별 인기 얼굴">
-	<meta property="og:description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다.">
+	<meta property="og:description" content="这是一个利用谷歌人工智能制作成的各个国家受欢迎的面貌判别网站。">
 	<meta property="og:image" content="../../opengraph.png">
 	<meta property="og:url" content="https://www.countrybyface.com/">
 
 	<!-- favicon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<title>나라별 인기 얼굴</title>
+	<title>各国家流行的面貌</title>
 
 	<link rel="stylesheet" href="../../style.css">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -51,25 +51,25 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light nav-distance">
-		<a class="navbar-brand" href="https://www.countrybyface.com/">나는 어느나라에서 호감상 일까?</a>
+		<a class="navbar-brand" href="https://www.countrybyface.com/">各国家流行的面貌</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="https://www.countrybyface.com/zh/index.html">Chinese Hom
+					<a class="nav-link" href="https://www.countrybyface.com/zh/index.html">主页
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="../../database/index.html">데이터 베이스</a>
+					<a class="nav-link" href="../../database/index.html">资料库</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">구글 AI</a>
+					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">谷歌人工智能</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">개인정보처리방침</a>
+					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">个人信息处理政策</a>
 				</li>
 			</ul>
 		</div>
@@ -112,16 +112,15 @@
 	
 	<section class="section">
 		<h1 class="title">
-			나라별
-			<u>인기 있는</u> 얼굴 상
+			各国家流行的面貌
 		</h1>
 		<h2 class="subtitle">
-			AI가 보는 나는 어느 나라에서 인기가 많을까?
+			人工智能会觉得我在哪个国家有魅力呢？
 		</h2>
 	</section>
 
 	<section class="d-flex justify-content-center" style="margin-bottom: 30px">
-        <p class="d-flex align-items-center pr-3">여자</p>
+        <p class="d-flex align-items-center pr-3">女</p>
         <div>
             <input type="checkbox" id="gender">
             <label for="gender">
@@ -130,21 +129,21 @@
                 </span>
             </label>
         </div>
-        <p class="d-flex align-items-center pl-3">남자</p>
+        <p class="d-flex align-items-center pl-3">男</p>
     </section>
 	
 	<div class="file-upload">
-		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">사진 넣기</button>
+		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">上传照片</button>
 
 		<div class="image-upload-wrap">
 			<input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
 			<div class="drag-text">
-				<h3>사진을 올려 놓으세요!</h3>
+				<h3>请上传照片!</h3>
 			</div>
 		</div>
 		<div class="file-upload-content">
 			<div class="image-title-wrap">
-				<button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 다시하기
+				<button type="button" onclick="removeUpload()" class="remove-image">用别的照片再试一次
 				</button>
 			</div>
 			<div class="row">
@@ -159,7 +158,7 @@
 			</div>
 
 			<div class="wrapperloading" style="display: none;">
-				<div class="text">AI가 당신의 얼굴상을 분석하고 있습니다..</div>
+				<div class="text">人工智能正在分析您的脸。。</div>
 				<div class="inner">
 					<div class="loading up"></div>
 					<div class="loading down"></div>
@@ -167,7 +166,7 @@
 			</div>
 
 			<div class="congrat" style="display: none">
-				<b>축하합니다!</b>
+				<b>恭喜！</b>
 			</div>
 			<p class="result-message"></p>
 			<div id="label-container" class="d-flex flex-column justify-content-around"></div>
@@ -176,7 +175,7 @@
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<div class="addthis_inline_share_toolbox_iaic"></div>
 
-		<button class="start" type="button" onclick="init()" style="display: none;">시작하기</button>
+		<button class="start" type="button" onclick="init()" style="display: none;">开始</button>
 	</div>
 
 	<div id="webcam-container"></div>
@@ -325,77 +324,77 @@
 			var resultMessage;
 			switch (prediction[0].className) {
 				case "Korea":
-					resultMessage = "한국에서 인기 있는 상"
+					resultMessage = "在韩国最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Korea.png";
 					document.getElementById("flag2").src = "../../Flags/Korea.png";
 					break;
 				case "China":
-					resultMessage = "중국에서 인기 있는 상"
+					resultMessage = "在中国最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/China.png";
 					document.getElementById("flag2").src = "../../Flags/China.png";
 					break;
 				case "Japan":
-					resultMessage = "일본에서 인기 있는 상"
+					resultMessage = "在日本最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Japan.png";
 					document.getElementById("flag2").src = "../../Flags/Japan.png";
 					break;
 				case "USA":
-					resultMessage = "미국에서 인기 있는 상"
+					resultMessage = "在美国最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/USA.png";
 					document.getElementById("flag2").src = "../../Flags/USA.png";
 					break;
 				case "Canada":
-					resultMessage = "캐나다에서 인기 있는 상"
+					resultMessage = "在加拿大最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Canada.png";
 					document.getElementById("flag2").src = "../../Flags/Canada.png";
 					break;
 				case "Mexico":
-					resultMessage = "맥시코에서 인기 있는 상"
+					resultMessage = "在墨西哥最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Mexico.png";
 					document.getElementById("flag2").src = "../../Flags/Mexico.png";
 					break;
 				case "India":
-					resultMessage = "인도에서 인기 있는 상"
+					resultMessage = "在印度最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/India.png";
 					document.getElementById("flag2").src = "../../Flags/India.png";
 					break;
 				case "Arab":
-					resultMessage = "아랍에서 인기 있는 상"
+					resultMessage = "在阿拉伯最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/ArabFederation.png";
 					document.getElementById("flag2").src = "../../Flags/ArabFederation.png";
 					break;
 				case "Italy":
-					resultMessage = "이탈리아에서 인기 있는 상"
+					resultMessage = "在意大利最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Italy.png";
 					document.getElementById("flag2").src = "../../Flags/Italy.png";
 					break;
 				case "Spain":
-					resultMessage = "스페인에서 인기 있는 상"
+					resultMessage = "在西班牙最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Spain.png";
 					document.getElementById("flag2").src = "../../Flags/Spain.png";
 					break;
 				case "France":
-					resultMessage = "프랑스에서 인기 있는 상"
+					resultMessage = "在法国最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/France.png";
 					document.getElementById("flag2").src = "../../Flags/France.png";
 					break;
 				case "Germany":
-					resultMessage = "독일에서 인기 있는 상"
+					resultMessage = "在德国最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Germany.png";
 					document.getElementById("flag2").src = "../../Flags/Germany.png";
 					break;
 				case "UK":
-					resultMessage = "영국에서 인기 있는 상"
+					resultMessage = "在英国最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/UK.png";
 					document.getElementById("flag2").src = "../../Flags/UK.png";
 					break;
 				case "Brazil":
-					resultMessage = "브라질에서 인기 있는 상"
+					resultMessage = "在巴西最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Brazil.png";
 					document.getElementById("flag2").src = "../../Flags/Brazil.png";
 					break;
 				case "Russia":
-					resultMessage = "러시아에서 인기 있는 상"
+					resultMessage = "在俄国最受欢迎的面貌"
 					document.getElementById("flag1").src = "../../Flags/Russia.png";
 					document.getElementById("flag2").src = "../../Flags/Russia.png";
 					break;
@@ -416,49 +415,49 @@
 				var labelTitle;
 				switch (prediction[i].className) {
 					case "USA":
-						labelTitle = "미국"
+						labelTitle = "美国"
 						break;
 					case "Korea":
-						labelTitle = "한국"
+						labelTitle = "韩国"
 						break;
 					case "Japan":
-						labelTitle = "일본"
+						labelTitle = "日本"
 						break;
 					case "UK":
-						labelTitle = "영국"
+						labelTitle = "英国"
 						break;
 					case "India":
-						labelTitle = "인도"
+						labelTitle = "印度"
 						break;
 					case "Mexico":
-						labelTitle = "멕시코"
+						labelTitle = "墨西哥"
 						break;
 					case "Brazil":
-						labelTitle = "브라질"
+						labelTitle = "巴西"
 						break;
 					case "France":
-						labelTitle = "프랑스"
+						labelTitle = "法国"
 						break;
 					case "Spain":
-						labelTitle = "스페인"
+						labelTitle = "西班牙"
 						break;
 					case "Italy":
-						labelTitle = "이탈리아"
+						labelTitle = "意大利"
 						break;
 					case "China":
-						labelTitle = "중국"
+						labelTitle = "中国"
 						break;
 					case "Germany":
-						labelTitle = "독일"
+						labelTitle = "德国"
 						break;
 					case "Russia":
-						labelTitle = "러시아"
+						labelTitle = "俄国"
 						break;
 					case "Arab":
-						labelTitle = "아랍"
+						labelTitle = "阿拉伯"
 						break;
 					case "Canada":
-						labelTitle = "캐나다"
+						labelTitle = "加拿大"
 						break;
 					default:
 						labelTitle = "알수없음"
