--- a/zh/index.html
+++ b/zh/index.html
@@ -36,7 +36,7 @@
 	<!-- favicon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<title>各国家受欢迎的长相</title>
+	<title>各国受欢迎的长相</title>
 
 	<link rel="stylesheet" href="../../style.css">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -51,7 +51,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light nav-distance">
-		<a class="navbar-brand" href="https://www.countrybyface.com/">各国家受欢迎的长相</a>
+		<a class="navbar-brand" href="https://www.countrybyface.com/">各国受欢迎的长相</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
