--- a/zh/index.html
+++ b/zh/index.html
@@ -112,7 +112,7 @@
 	
 	<section class="section">
 		<h1 class="title">
-			各国家流行的面貌
+			各国受欢迎的长相
 		</h1>
 		<h2 class="subtitle">
 			人工智能会觉得我在哪个国家有魅力呢？
