--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="나라별 인기 얼굴">
 	<meta property="og:description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다.">
-	<meta property="og:image" content="opengraph.png">
+	<meta property="og:image" content="thumbnail.png">
 	<meta property="og:url" content="https://www.countrybyface.com/">
 
 	<!-- favicon -->
