--- a/zh/index.html
+++ b/zh/index.html
@@ -30,7 +30,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="나라별 인기 얼굴">
 	<meta property="og:description" content="这是一个利用谷歌人工智能制作成的各个国家受欢迎的面貌判别网站。">
-	<meta property="og:image" content="../../opengraph.png">
+	<meta property="og:image" content="../../thumbnail.png">
 	<meta property="og:url" content="https://www.countrybyface.com/">
 
 	<!-- favicon -->
