--- a/database/Female.html
+++ b/database/Female.html
@@ -358,6 +358,12 @@ http://www.tooplate.com/view/2101-insertion
 			</div>
 		</div>
 		<!-- end col -->
+		<div class="ad" style="margin-bottom: 5%">
+
+			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
+			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
+		</div>
 
 		<div class="row tm-about-row tm-mb-medium" style="margin-left: 10%; margin-top: 5%">
 			<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mb-4">
@@ -383,12 +389,6 @@ http://www.tooplate.com/view/2101-insertion
 			</div>
 		</div>
 
-		<div class="ad">
-
-			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
-			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-
-		</div>
 
 		<footer class="row tm-about-row">
 			<div class="col-xl-12">
