--- a/database/Male.html
+++ b/database/Male.html
@@ -93,8 +93,15 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/ArabFederation.png" alt="Smiley face" height="72" width="110">
 					<h2>Arab</h2>
-					<a href="">Mona Zaki</a><br>
-					<a href="">Yasmin Abdulaziz</a>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -102,15 +109,15 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/Brazil.png" alt="Smiley face" height="72" width="110">
 					<h2>Brazil</h2>
-					<a href="">Gisele Bündchen</a> &emsp;
-					<a href="">Ísis Valverde</a> &emsp;
-					<a href="">Adriana Lima</a> <br>
-					<a href="">Juliana Paes</a> &emsp;
-					<a href="">Izabelle Leite</a> &emsp;
-					<a href="">Cléo Pires</a><br>
-					<a href="">Alessandra Ambrósio</a> &emsp;
-					<a href="">Giovanna Antonelli</a> &emsp;
-					<a href="">Marjorie Estiano</a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -118,15 +125,15 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/Canada.png" alt="Smiley face" height="72" width="140">
 					<h2>Canada</h2>
-					<a href="">Kristin Kreuk</a> &emsp;
-					<a href="">Cobie Smulders</a> &emsp;
-					<a href="">Emmanuelle Chriqui</a> <br>
-					<a href="">Ellen Page</a> &emsp;
-					<a href="">Neve Campbell</a>&emsp;
-					<a href="">Elisha Cuthbert</a> <br>
-					<a href="">Anna Paquin</a>&emsp; 
-					<a href="">Pamela Anderson</a>&emsp;
-					<a href="">Natasha Henstridge</a>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 					
 				</div>
 			</div>
@@ -135,7 +142,15 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/China.png" alt="Smiley face" height="72" width="110">
 					<h2>China</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -143,7 +158,15 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/France.png" alt="Smiley face" height="72" width="110">
 					<h2>France</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -151,14 +174,30 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/Germany.png" alt="Smiley face" height="72" width="110">
 					<h2>Germany</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="services-inner-box">
 					<img src="../Flags/India.png" alt="Smiley face" height="72" width="110">
 					<h2>India</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -166,7 +205,15 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/Italy.png" alt="Smiley face" height="72" width="110">
 					<h2>Italy</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -174,14 +221,30 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/Japan.png" alt="Smiley face" height="72" width="110">
 					<h2>Japan</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="services-inner-box">
 					<img src="../Flags/Korea.png" alt="Smiley face" height="72" width="110">
 					<h2>South Korea</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -189,7 +252,15 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/Mexico.png" alt="Smiley face" height="72" width="110">
 					<h2>Mexico</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -197,14 +268,30 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/Russia.png" alt="Smiley face" height="72" width="110">
 					<h2>Russia</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="services-inner-box">
 					<img src="../Flags/Spain.png" alt="Smiley face" height="72" width="110">
 					<h2>Spain</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -212,7 +299,15 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/UK.png" alt="Smiley face" height="72" width="110">
 					<h2>U.K.</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 			<!-- end col -->
@@ -220,11 +315,26 @@ http://www.tooplate.com/view/2101-insertion
 				<div class="services-inner-box">
 					<img src="../Flags/USA.png" alt="Smiley face" height="72" width="110">
 					<h2>U.S.A</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a><br>
+					<a href=""></a> &emsp;
+					<a href=""></a> &emsp;
+					<a href=""></a> <br>
 				</div>
 			</div>
 		</div>
 		<!-- end col -->
+	  
+	  <div class="ad" style="margin-bottom: 5%">
+
+			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
+			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
+		</div>
 
 		<div class="row tm-about-row tm-mb-medium" style="margin-left: 10%; margin-top: 5%">
 			<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mb-4">
@@ -248,13 +358,6 @@ http://www.tooplate.com/view/2101-insertion
 				<a href="https://portfoliosimulator.netlify.app/" target="_balnk" class="tm-text-blue-dark d-block mb-2">Portfolio Simulator</a>
 				<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" target="_balnk" class="tm-text-blue-dark d-block">Jocoding Youtube Channel</a>
 			</div>
-		</div>
-
-		<div class="ad">
-
-			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
-			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-
 		</div>
 
 		<footer class="row tm-about-row">
