--- a/database/index.html
+++ b/database/index.html
@@ -280,6 +280,10 @@ http://www.tooplate.com/view/2101-insertion
 				</div>
 			</div>
 		</div>
+		<div class="ad" style="margin-bottom: 5%">
+			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
+			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+		</div>
 
 		<div class="row tm-about-row tm-mb-medium">
 			<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mb-4">
@@ -303,10 +307,6 @@ http://www.tooplate.com/view/2101-insertion
 				<a href="https://portfoliosimulator.netlify.app/" target="_balnk" class="tm-text-blue-dark d-block mb-2">Portfolio Simulator</a>
 				<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" target="_balnk" class="tm-text-blue-dark d-block">Jocoding Youtube Channel</a>
 			</div>
-		</div>
-		<div class="ad">
-			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
-			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		</div>
 
 		<footer class="row">
