--- a/ja/index.html
+++ b/ja/index.html
@@ -172,6 +172,7 @@
 			<p class="result-message"></p>
 			<div id="label-container" class="d-flex flex-column justify-content-around"></div>
 		</div>
+		<button class="detail" type="button" onclick="detail()" style="display: none;">결과 더 알아보기</button>
 
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<div class="addthis_inline_share_toolbox_iaic"></div>
@@ -273,6 +274,13 @@
 				removeUpload();
 			}
 		}
+		function detail() {
+			if (document.getElementById("gender").checked) {
+				window.location.href ='database/Male.html';
+			} else {
+				window.location.href ='database/Female.html';
+			}
+		}
 
 		function onload() {
     		var male = localStorage.getItem("male");
@@ -336,6 +344,8 @@
 			$('.wrapperloading').hide();
 			$('.addthis_inline_share_toolbox_iaic').show();
 			$('.congrat').show();
+			$('.start').hide();
+			$('.detail').show();
 			var resultMessage;
 			switch (prediction[0].className) {
 				case "Korea":
