--- a/en/index.html
+++ b/en/index.html
@@ -171,7 +171,7 @@
 			<p class="result-message"></p>
 			<div id="label-container" class="d-flex flex-column justify-content-around"></div>
 		</div>
-		<button class="detail" type="button" onclick="detail()" style="display: none;">결과 더 알아보기</button>
+		<button class="detail" type="button" onclick="detail()" style="display: none;">More about the result</button>
 
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<div class="addthis_inline_share_toolbox_iaic"></div>
@@ -277,9 +277,9 @@
 		}
 		function detail() {
 			if (document.getElementById("gender").checked) {
-				window.location.href ='database/Male.html';
+				window.location.href ='../database/Male.html';
 			} else {
-				window.location.href ='database/Female.html';
+				window.location.href ='../database/Female.html';
 			}
 		}
 
