--- a/ja/index.html
+++ b/ja/index.html
@@ -276,9 +276,9 @@
 		}
 		function detail() {
 			if (document.getElementById("gender").checked) {
-				window.location.href ='database/Male.html';
+				window.location.href ='../database/Male.html';
 			} else {
-				window.location.href ='database/Female.html';
+				window.location.href ='../database/Female.html';
 			}
 		}
 
