--- a/database/index.html
+++ b/database/index.html
@@ -283,6 +283,12 @@ http://www.tooplate.com/view/2101-insertion
 		<div class="ad" style="margin-bottom: 5%">
 			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
 			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+			
+			<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-vb9lnha4lq28" 
+ data-ad-width   = "320" 
+ data-ad-height  = "50"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		</div>
 
 		<div class="row tm-about-row tm-mb-medium">
