--- a/database/Female.html
+++ b/database/Female.html
@@ -363,13 +363,15 @@ http://www.tooplate.com/view/2101-insertion
 
 			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
 			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-			
-			<ins class="kakao_ad_area" style="display:none;" 
+		</div>
+		
+		<div class="ad2">
+		<ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-vb9lnha4lq28" 
  data-ad-width   = "320" 
  data-ad-height  = "50"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-
+		
 		</div>
 
 		<div class="row tm-about-row tm-mb-medium" style="margin-left: 10%; margin-top: 5%">
