--- a/database/Female.html
+++ b/database/Female.html
@@ -359,7 +359,7 @@ http://www.tooplate.com/view/2101-insertion
 			</div>
 		</div>
 		<!-- end col -->
-		<div class="ad" style="margin-bottom: 5%">
+		<div class="advertisement1" style="margin-bottom: 1%; margin-top: 2%">
 
 			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
 			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
