--- a/database/index.html
+++ b/database/index.html
@@ -280,7 +280,7 @@ http://www.tooplate.com/view/2101-insertion
 				</div>
 			</div>
 		</div>
-		<div class="ad" style="margin-bottom: 5%">
+		<div class="advertisement1" style="margin-bottom: 1%; margin-top: 2%">
 			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1k1rpktd3bqr5" data-ad-width="300" data-ad-height="250"></ins>
 			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		</div>
@@ -291,7 +291,6 @@ http://www.tooplate.com/view/2101-insertion
  data-ad-width   = "320" 
  data-ad-height  = "50"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-		
 		</div>
 
 		<div class="row tm-about-row tm-mb-medium">
