--- a/database/index.html
+++ b/database/index.html
@@ -22,6 +22,7 @@ http://www.tooplate.com/view/2101-insertion
 	<!-- Font awesome -->
 	<link rel="stylesheet" href="css/tooplate-style.css">
 	<!-- Templatemo style -->
+	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="../icon.png" sizes="16x16">
 
 	<script>
