--- a/database/index.html
+++ b/database/index.html
@@ -287,7 +287,7 @@ http://www.tooplate.com/view/2101-insertion
 			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		</div>
 		
-		<div class="ad2">
+		<div class="ad2" style="margin-bottom: 5%">
 		<ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-vb9lnha4lq28" 
  data-ad-width   = "320" 
