--- a/ja/index.html
+++ b/ja/index.html
@@ -36,7 +36,7 @@
 	<!-- favicon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<title>나라별 인기 얼굴</title>
+	<title>世界の人気の顔</title>
 
 	<link rel="stylesheet" href="../../style.css">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -51,25 +51,25 @@
 
 <body onload="onload()">
 	<nav class="navbar navbar-expand-lg navbar-light nav-distance">
-		<a class="navbar-brand" href="https://www.countrybyface.com/">나는 어느나라에서 호감상 일까?</a>
+		<a class="navbar-brand" href="https://www.countrybyface.com/">私はどの国に人気があるかな?</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="https://www.countrybyface.com/ja/index.html">Japanese Home
+					<a class="nav-link" href="https://www.countrybyface.com/ja/index.html">ホーム
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="../../database/index.html">데이터 베이스</a>
+					<a class="nav-link" href="../../database/index.html">データベース</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">구글 AI</a>
+					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">Google AI</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">개인정보처리방침</a>
+					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">プライバシーポリシー</a>
 				</li>
 			</ul>
 		</div>
@@ -111,16 +111,15 @@
 	
 	<section class="section">
 		<h1 class="title">
-			나라별
-			<u>인기 있는</u> 얼굴 상
+			世界の人気の顔
 		</h1>
 		<h2 class="subtitle">
-			AI가 보는 나는 어느 나라에서 인기가 많을까?
+			AIが見た私はどの国に人気があるかな?
 		</h2>
 	</section>
 
 	<section class="d-flex justify-content-center" style="margin-bottom: 30px">
-        <p class="d-flex align-items-center pr-3">여자</p>
+        <p class="d-flex align-items-center pr-3">女性</p>
         <div>
             <input type="checkbox" id="gender">
             <label for="gender">
@@ -129,21 +128,21 @@
                 </span>
             </label>
         </div>
-        <p class="d-flex align-items-center pl-3">남자</p>
+        <p class="d-flex align-items-center pl-3">男性</p>
     </section>
 	
 	<div class="file-upload">
-		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">사진 넣기</button>
+		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">写真をアップロード</button>
 
 		<div class="image-upload-wrap">
 			<input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
 			<div class="drag-text">
-				<h3>사진을 올려 놓으세요!</h3>
+				<h3>ここに写真をドラッグ＆ドロップしてください</h3>
 			</div>
 		</div>
 		<div class="file-upload-content">
 			<div class="image-title-wrap">
-				<button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 다시하기
+				<button type="button" onclick="removeUpload()" class="remove-image">別の写真でもう一回
 				</button>
 			</div>
 			<div class="row">
@@ -158,7 +157,7 @@
 			</div>
 
 			<div class="wrapperloading" style="display: none;">
-				<div class="text">AI가 당신의 얼굴상을 분석하고 있습니다..</div>
+				<div class="text">今AIがあなたの顔を分析しています..</div>
 				<div class="inner">
 					<div class="loading up"></div>
 					<div class="loading down"></div>
@@ -166,17 +165,17 @@
 			</div>
 
 			<div class="congrat" style="display: none">
-				<b>축하합니다!</b>
+				<b>おめでとうございます！</b>
 			</div>
 			<p class="result-message"></p>
 			<div id="label-container" class="d-flex flex-column justify-content-around"></div>
 		</div>
-		<button class="detail" type="button" onclick="detail()" style="display: none;">결과 더 알아보기</button>
+		<button class="detail" type="button" onclick="detail()" style="display: none;">もっと結果を調べる</button>
 
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<div class="addthis_inline_share_toolbox_iaic"></div>
 
-		<button class="start" type="button" onclick="init()" style="display: none;">시작하기</button>
+		<button class="start" type="button" onclick="init()" style="display: none;">開始する</button>
 	</div>
 
 	<div id="webcam-container"></div>
@@ -348,77 +347,77 @@
 			var resultMessage;
 			switch (prediction[0].className) {
 				case "Korea":
-					resultMessage = "한국에서 인기 있는 상"
+					resultMessage = "韓国の美の基準"
 					document.getElementById("flag1").src = "../../Flags/Korea.png";
 					document.getElementById("flag2").src = "../../Flags/Korea.png";
 					break;
 				case "China":
-					resultMessage = "중국에서 인기 있는 상"
+					resultMessage = "中国の美の基準"
 					document.getElementById("flag1").src = "../../Flags/China.png";
 					document.getElementById("flag2").src = "../../Flags/China.png";
 					break;
 				case "Japan":
-					resultMessage = "일본에서 인기 있는 상"
+					resultMessage = "日本の美の基準"
 					document.getElementById("flag1").src = "../../Flags/Japan.png";
 					document.getElementById("flag2").src = "../../Flags/Japan.png";
 					break;
 				case "USA":
-					resultMessage = "미국에서 인기 있는 상"
+					resultMessage = "アメリカの美の基準"
 					document.getElementById("flag1").src = "../../Flags/USA.png";
 					document.getElementById("flag2").src = "../../Flags/USA.png";
 					break;
 				case "Canada":
-					resultMessage = "캐나다에서 인기 있는 상"
+					resultMessage = "カナダの美の基準"
 					document.getElementById("flag1").src = "../../Flags/Canada.png";
 					document.getElementById("flag2").src = "../../Flags/Canada.png";
 					break;
 				case "Mexico":
-					resultMessage = "맥시코에서 인기 있는 상"
+					resultMessage = "メキシコの美の基準"
 					document.getElementById("flag1").src = "../../Flags/Mexico.png";
 					document.getElementById("flag2").src = "../../Flags/Mexico.png";
 					break;
 				case "India":
-					resultMessage = "인도에서 인기 있는 상"
+					resultMessage = "インドの美の基準"
 					document.getElementById("flag1").src = "../../Flags/India.png";
 					document.getElementById("flag2").src = "../../Flags/India.png";
 					break;
 				case "Arab":
-					resultMessage = "아랍에서 인기 있는 상"
+					resultMessage = "アラブの美の基準"
 					document.getElementById("flag1").src = "../../Flags/ArabFederation.png";
 					document.getElementById("flag2").src = "../../Flags/ArabFederation.png";
 					break;
 				case "Italy":
-					resultMessage = "이탈리아에서 인기 있는 상"
+					resultMessage = "イタリアの美の基準"
 					document.getElementById("flag1").src = "../../Flags/Italy.png";
 					document.getElementById("flag2").src = "../../Flags/Italy.png";
 					break;
 				case "Spain":
-					resultMessage = "스페인에서 인기 있는 상"
+					resultMessage = "スペインの美の基準"
 					document.getElementById("flag1").src = "../../Flags/Spain.png";
 					document.getElementById("flag2").src = "../../Flags/Spain.png";
 					break;
 				case "France":
-					resultMessage = "프랑스에서 인기 있는 상"
+					resultMessage = "フランスの美の基準"
 					document.getElementById("flag1").src = "../../Flags/France.png";
 					document.getElementById("flag2").src = "../../Flags/France.png";
 					break;
 				case "Germany":
-					resultMessage = "독일에서 인기 있는 상"
+					resultMessage = "ドイツの美の基準"
 					document.getElementById("flag1").src = "../../Flags/Germany.png";
 					document.getElementById("flag2").src = "../../Flags/Germany.png";
 					break;
 				case "UK":
-					resultMessage = "영국에서 인기 있는 상"
+					resultMessage = "イギリスの美の基準"
 					document.getElementById("flag1").src = "../../Flags/UK.png";
 					document.getElementById("flag2").src = "../../Flags/UK.png";
 					break;
 				case "Brazil":
-					resultMessage = "브라질에서 인기 있는 상"
+					resultMessage = "ブラジルの美の基準"
 					document.getElementById("flag1").src = "../../Flags/Brazil.png";
 					document.getElementById("flag2").src = "../../Flags/Brazil.png";
 					break;
 				case "Russia":
-					resultMessage = "러시아에서 인기 있는 상"
+					resultMessage = "ロシアの美の基準"
 					document.getElementById("flag1").src = "../../Flags/Russia.png";
 					document.getElementById("flag2").src = "../../Flags/Russia.png";
 					break;
@@ -439,49 +438,49 @@
 				var labelTitle;
 				switch (prediction[i].className) {
 					case "USA":
-						labelTitle = "미국"
+						labelTitle = "アメリカ"
 						break;
 					case "Korea":
-						labelTitle = "한국"
+						labelTitle = "韓国"
 						break;
 					case "Japan":
-						labelTitle = "일본"
+						labelTitle = "日本"
 						break;
 					case "UK":
-						labelTitle = "영국"
+						labelTitle = "イギリス"
 						break;
 					case "India":
-						labelTitle = "인도"
+						labelTitle = "インド"
 						break;
 					case "Mexico":
-						labelTitle = "멕시코"
+						labelTitle = "メキシコ"
 						break;
 					case "Brazil":
-						labelTitle = "브라질"
+						labelTitle = "ブラジル"
 						break;
 					case "France":
-						labelTitle = "프랑스"
+						labelTitle = "フランス"
 						break;
 					case "Spain":
-						labelTitle = "스페인"
+						labelTitle = "スペイン"
 						break;
 					case "Italy":
-						labelTitle = "이탈리아"
+						labelTitle = "イタリア"
 						break;
 					case "China":
-						labelTitle = "중국"
+						labelTitle = "中国"
 						break;
 					case "Germany":
-						labelTitle = "독일"
+						labelTitle = "ドイツ"
 						break;
 					case "Russia":
-						labelTitle = "러시아"
+						labelTitle = "ロシア"
 						break;
 					case "Arab":
-						labelTitle = "아랍"
+						labelTitle = "アラブ"
 						break;
 					case "Canada":
-						labelTitle = "캐나다"
+						labelTitle = "カナダ"
 						break;
 					default:
 						labelTitle = "알수없음"
