--- a/zh/index.html
+++ b/zh/index.html
@@ -17,14 +17,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
 	<link rel="canonical" href="https://www.countrybyface.com/">
 	<!-- language -->
-	<link rel="alternate" hreflang="ko" href="https://countrybyface.com/ko/index.html" />
-    <link rel="alternate" hreflang="en" href="https://countrybyface.com/en/index.html" />
-    <link rel="alternate" hreflang="es" href="https://countrybyface.com/es/index.html" />
-    <link rel="alternate" hreflang="ja" href="https://countrybyface.com/ja/index.html" />
-    <link rel="alternate" hreflang="zh" href="https://countrybyface.com/zh/index.html" />
-    <link rel="alternate" hreflang="vi" href="https://countrybyface.com/vi/index.html" />
-    <link rel="alternate" hreflang="id" href="https://countrybyface.com/id/index.html" />
-    <link rel="alternate" hreflang="x-default" href="https://countrybyface.com/" />
+	<link rel="alternate" hreflang="ko" href="https://countrybyface.netlify.app/ko/index.html" />
+    <link rel="alternate" hreflang="en" href="https://countrybyface.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="es" href="https://countrybyface.netlify.app/es/index.html" />
+    <link rel="alternate" hreflang="ja" href="https://countrybyface.netlify.app/ja/index.html" />
+    <link rel="alternate" hreflang="zh" href="https://countrybyface.netlify.app/zh/index.html" />
+    <link rel="alternate" hreflang="vi" href="https://countrybyface.netlify.app/vi/index.html" />
+    <link rel="alternate" hreflang="id" href="https://countrybyface.netlify.app/id/index.html" />
+    <link rel="alternate" hreflang="x-default" href="https://countrybyface.netlify.app/en/index.html" />
 
 	<!-- open graphic -->
 	<meta property="og:type" content="website">
